--- a/index.html
+++ b/index.html
@@ -58,15 +58,25 @@
             border: 2px solid rgba(255, 255, 255, 0.3);
             border-radius: 5px;
             padding: 10px;
+            margin: 10px auto; /* Centrer horizontalement */
+            max-width: 600px; /* Limiter la largeur */
+        }
+        #canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
     <div id="header">
         <!-- Mettez ici votre image -->
         <h1>Vidéothèque</h1>
     </div>
+    <canvas id="canvas"></canvas>
     <input type="text" id="searchInput" placeholder="Rechercher...">
     <div id="videoList" class="pageFrame"></div>
     <div id="pagination" class="pageFrame">
