--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
+            display: block; /* Correction du problème de débordement */
         }
     </style>
 </head>
