--- a/index.html
+++ b/index.html
@@ -70,6 +70,45 @@
             z-index: -1;
             display: block; /* Correction du problème de débordement */
         }
+        #modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.8);
+        }
+        #modal-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #222;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        #close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        #video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            overflow: hidden;
+        }
+        #videoPlayer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -87,7 +126,9 @@
     <div id="modal">
         <div id="modal-content">
             <span id="close">×</span>
-            <iframe id="videoPlayer" allowfullscreen></iframe>
+            <div id="video-container">
+                <iframe id="videoPlayer" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
