--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidéothèque</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
             background-color: #2e2e2e;
             color: #fff;
-            margin: 0;
-            padding: 0;
-            user-select: none; /* Désactiver la sélection de texte */
+        }
+        #header {
+            text-align: center;
+            padding: 20px 0;
         }
         #videoList {
             margin: 20px auto;
             max-width: 600px;
             padding: 0 20px;
         }
-        .videoItem {
+        .videoContainer {
             margin-bottom: 10px;
             padding: 10px;
             background-color: rgba(0, 0, 0, 0.5);
@@ -26,8 +26,19 @@
             cursor: pointer;
             text-align: center; /* Centrer le texte */
         }
-        .videoItem:hover {
+        .videoContainer:hover {
             background-color: rgba(255, 255, 255, 0.1);
+        }
+        #searchInput {
+            margin: 20px auto;
+            display: block;
+            padding: 10px;
+            width: 80%;
+            border: none;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            text-align: center; /* Centrer le texte */
         }
         #modal {
             display: none;
@@ -37,16 +48,24 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0,0,0,0.8);
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
         }
         #modal-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #222;
-            padding: 20px;
-            border-radius: 5px;
+            background-color: #000000;
+            margin: 15% auto;
+            padding: 10px;
+            border: 1px solid #888;
+            width: 50%;
+            height: auto;
+            max-height: 90vh;
+            border-radius: 10px;
+            box-shadow: 10px 10px 5px grey;
+            overflow: hidden;
+        }
+        #videoPlayer {
+            width: 100%;
+            height: 80%;
         }
         #close {
             color: #aaa;
@@ -55,76 +74,211 @@
             font-weight: bold;
             cursor: pointer;
         }
-        #video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
-        }
-        #videoPlayer {
-            position: absolute;
+        #canvas {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            pointer-events: none; /* Empêche le canvas d'interférer avec les interactions de la souris sur les autres éléments */
+            z-index: -1; /* Assure que le canvas est positionné en arrière-plan */
+        }
+        #pagination {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .paginationBtn {
+            display: inline-block;
+            margin: 0 5px;
+            cursor: pointer;
+            color: #fff;
         }
     </style>
 </head>
 <body>
+    <canvas id="canvas"></canvas>
+    <div id="header">
+        <!-- Mettez ici votre image -->
+        <h1>Vidéothèque</h1>
+    </div>
+    <input type="text" id="searchInput" placeholder="Rechercher...">
     <div id="videoList"></div>
+    <div id="pagination">
+        <span id="prevPage" class="paginationBtn">&lt; Précédent</span>
+        <span id="nextPage" class="paginationBtn">Suivant &gt;</span>
+    </div>
     <div id="modal">
         <div id="modal-content">
             <span id="close">×</span>
-            <div id="video-container">
-                <iframe id="videoPlayer" allowfullscreen></iframe>
-            </div>
+            <iframe id="videoPlayer" allowfullscreen></iframe>
         </div>
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var videosData = []; // Contiendra toutes les vidéos
+        var videosPerPage = 20;
+        var currentPage = 1;
+        var videosData = []; // Contiendra toutes les vidéos
+        var filteredVideos = []; // Contiendra les vidéos filtrées
 
-            // Charger les vidéos à partir de videos.json
-            fetch('videos.json')
-              .then(response => response.json())
-              .then(videos => {
-                videosData = videos;
-                displayVideos(videosData);
-              });
+        // Fonction pour afficher les vidéos sur une page donnée
+        function displayVideos(page) {
+            var startIndex = (page - 1) * videosPerPage;
+            var endIndex = startIndex + videosPerPage;
+            var videosToDisplay = filteredVideos.slice(startIndex, endIndex);
 
-            function displayVideos(videos) {
-                var videoList = document.getElementById('videoList');
-                videoList.innerHTML = ''; // Nettoie le contenu précédent
+            var container = document.getElementById('videoList');
+            container.innerHTML = ''; // Efface le contenu précédent
 
-                videos.forEach(function(video) {
-                    var videoElement = document.createElement('div');
-                    videoElement.textContent = video.title;
-                    videoElement.className = 'videoItem';
-                    videoElement.setAttribute('data-url', video.url);
-                    videoList.appendChild(videoElement);
-                });
+            videosToDisplay.forEach(function(video) {
+                var videoWrapper = document.createElement('div'); // Create a wrapper div
+                videoWrapper.className = 'videoContainer'; // Add class for styling
+
+                var videoElement = document.createElement('div');
+                videoElement.textContent = video.title;
+                videoElement.onclick = createOnClickHandler(video.url);
+
+                videoWrapper.appendChild(videoElement); // Add the video element to the wrapper
+                container.appendChild(videoWrapper); // Add the wrapper to the container
+            });
+        }
+
+        // Fonction pour afficher la page suivante
+        function nextPage() {
+            if (currentPage < Math.ceil(filteredVideos.length / videosPerPage)) {
+                currentPage++;
+                displayVideos(currentPage);
+            }
+        }
+
+        // Fonction pour afficher la page précédente
+        function prevPage() {
+            if (currentPage > 1) {
+                currentPage--;
+                displayVideos(currentPage);
+            }
+        }
+
+        document.getElementById('nextPage').addEventListener('click', nextPage);
+        document.getElementById('prevPage').addEventListener('click', prevPage);
+
+        var canvas = document.getElementById('canvas');
+        var ctx = canvas.getContext('2d');
+
+        var stars = [];
+        var numStars = 300;
+        var maxDistance = 100;
+        var mousePos = {x: 0, y: 0};
+
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        for(var i = 0; i < numStars; i++) {
+            var x = Math.random() * canvas.width;
+            var y = Math.random() * canvas.height;
+            var speedX = (Math.random() - 1.0) * 1.0;
+            var speedY = (Math.random() - 1.0) * 1.0;
+            stars.push({x: x, y: y, speedX: speedX, speedY: speedY});
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            for(var i = 0; i < numStars; i++) {
+                var star = stars[i];
+                star.x += star.speedX;
+                star.y += star.speedY;
+
+                if(star.x < 0 || star.x > canvas.width) star.speedX = -star.speedX;
+                if(star.y < 0 || star.y > canvas.height) star.speedY = -star.speedY;
+
+                ctx.beginPath();
+                ctx.arc(star.x, star.y, 2, 0, Math.PI * 2);
+                ctx.fillStyle = "#ffffff";
+                ctx.fill();
+
+                for(var j = i + 1; j < numStars; j++) {
+                    var otherStar = stars[j];
+                    var dx = otherStar.x - star.x;
+                    var dy = otherStar.y - star.y;
+                    var distance = Math.sqrt(dx * dx + dy * dy);
+
+                    if(distance < maxDistance) {
+                        ctx.beginPath();
+                        ctx.moveTo(star.x, star.y);
+                        ctx.lineTo(otherStar.x, otherStar.y);
+                        ctx.strokeStyle = "rgba(255, 255, 255, " + (1 - distance / maxDistance) + ")";
+                        ctx.stroke();
+                    }
+                }
+
+                var dx = mousePos.x - star.x;
+                var dy = mousePos.y - star.y;
+                var distance = Math.sqrt(dx * dx + dy * dy);
+
+                if(distance < maxDistance) {
+                    ctx.beginPath();
+                    ctx.moveTo(star.x, star.y);
+                    ctx.lineTo(mousePos.x, mousePos.y);
+                    ctx.strokeStyle = "rgba(255, 255, 255, " + (1 - distance / maxDistance) + ")";
+                    ctx.stroke();
+                }
             }
 
-            // Gestion de l'affichage de la vidéo dans la fenêtre modale
-            document.addEventListener('click', function(event) {
-                if (event.target.classList.contains('videoItem')) {
-                    var videoUrl = event.target.getAttribute('data-url');
-                    var videoPlayer = document.getElementById('videoPlayer');
-                    videoPlayer.src = videoUrl;
-                    var modal = document.getElementById('modal');
-                    modal.style.display = 'block';
-                }
+            requestAnimationFrame(animate);
+        }
+
+        animate();
+
+        document.addEventListener('mousemove', function(e) {
+            mousePos.x = e.clientX;
+            mousePos.y = e.clientY;
+        });
+
+        // Charger les vidéos à partir de videos.json
+        fetch('videos.json')
+          .then(response => response.json())
+          .then(videos => {
+            videosData = videos;
+            filteredVideos = videosData; // Initialise les vidéos filtrées avec toutes les vidéos
+            displayVideos(currentPage);
+          });
+
+        function createOnClickHandler(url) {
+          return function() {
+            var modalContent = document.getElementById('modal-content');
+            var oldVideoPlayer = document.getElementById('videoPlayer');
+            if (oldVideoPlayer) {
+              modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
+            }
+            var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
+            videoPlayer.id = 'videoPlayer';
+            videoPlayer.src = url;
+            videoPlayer.allowFullscreen = true;
+            modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
+            document.getElementById('modal').style.display = "block";
+          };
+        }
+
+        // Fermer la fenêtre modale lorsque l'utilisateur clique sur (x)
+        document.getElementById('close').onclick = function() {
+          var modalContent = document.getElementById('modal-content');
+          var videoPlayer = document.getElementById('videoPlayer');
+          if (videoPlayer) {
+            modalContent.removeChild(videoPlayer); // Supprime l'iframe
+          }
+          document.getElementById('modal').style.display = "none";
+        }
+
+        // Barre de recherche pour filtrer les vidéos
+        document.getElementById('searchInput').addEventListener('input', function() {
+            var searchQuery = this.value.toLowerCase(); // Convertir la requête en minuscules pour une recherche insensible à la casse
+
+            filteredVideos = videosData.filter(function(video) {
+                return video.title.toLowerCase().includes(searchQuery);
             });
 
-            // Gestion de la fermeture de la fenêtre modale
-            var closeModal = document.getElementById('close');
-            closeModal.addEventListener('click', function() {
-                var modal = document.getElementById('modal');
-                var videoPlayer = document.getElementById('videoPlayer');
-                videoPlayer.src = ''; // Arrête la vidéo
-                modal.style.display = 'none';
-            });
+            currentPage = 1; // Réinitialise la page actuelle à 1 après la recherche
+            displayVideos(currentPage);
         });
     </script>
 </body>
