--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .videoContainer {
             margin-bottom: 10px;
-            padding: 15px; /* Ajout de remplissage pour agrandir la zone cliquable */
+            padding: 10px;
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 5px;
             cursor: pointer;
@@ -115,7 +115,7 @@
     </div>
 
     <script>
-        var videosPerPage = 14; // Modifier le nombre de vidéos par page
+        var videosPerPage = 20;
         var currentPage = 1;
         var videosData = []; // Contiendra toutes les vidéos
         var filteredVideos = []; // Contiendra les vidéos filtrées
