--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <canvas id="canvas"></canvas>
     <div id="header">
         <!-- Mettez ici votre image -->
-        <h1>Vidéothèque</h1>
+        <h1>Goldorak</h1>
     </div>
     <input type="text" id="searchInput" placeholder="Rechercher...">
     <div id="videoContainer">
