--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
         </div>
     </div>
 
+    <!-- Charger le menu -->
+    <iframe src="menu.html" frameborder="0" scrolling="no" style="position: fixed; top: 0; left: 0; height: 100%; width: 200px; z-index: 1000;"></iframe>
+
     <script>
         var videosPerPage = 14; // Nombre de vidéos par page
         var currentPage = 1; // Page actuelle
