--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="index.html">Vidéos</a></li>
+            <li><a href="film.html">Vidéos</a></li>
             <li><a href="serie.html">Séries</a></li>
             <li><a href="info.html">Informations</a></li>
         </ul>
