--- a/menu.html
+++ b/menu.html
@@ -55,7 +55,7 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="info.html">Informations</a></li>
+            <li><a href="index.html">Informations</a></li>
             <li><a href="film.html">Vidéos</a></li>
             <li><a href="serie.html">Séries</a></li>
         </ul>
@@ -72,8 +72,10 @@
         });
 
         menuLinks.forEach(function(link) {
-            link.addEventListener('click', function() {
-                menu.classList.remove('active'); // Ferme la barre latérale après avoir cliqué sur un lien
+            link.addEventListener('click', function(event) {
+                event.preventDefault(); // Empêche le comportement par défaut du lien
+                var href = this.getAttribute('href'); // Récupère l'URL du lien
+                window.location.href = href; // Redirige vers l'URL du lien
             });
         });
     </script>
