--- a/menu.html
+++ b/menu.html
@@ -55,9 +55,9 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="index.html">Informations</a></li>
-            <li><a href="film.html">Vidéos</a></li>
-            <li><a href="serie.html">Séries</a></li>
+            <li><a href="https://goldo1236.github.io/Goldorak.github.io/">Informations</a></li>
+            <li><a href="https://goldo1236.github.io/Goldorak.github.io/film">Vidéos</a></li>
+            <li><a href="https://goldo1236.github.io/Goldorak.github.io/serie">Séries</a></li>
         </ul>
     </div>
     <div id="menu-toggle">&#9776;</div>
