--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,6 @@
             transition: left 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
-            overflow: hidden; /* Masquer le contenu qui dépasse */
         }
         #menu ul {
             list-style: none;
@@ -55,9 +54,9 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="https://goldo1236.github.io/Goldorak.github.io/">Informations</a></li>
-            <li><a href="https://goldo1236.github.io/Goldorak.github.io/film">Vidéos</a></li>
-            <li><a href="https://goldo1236.github.io/Goldorak.github.io/serie">Séries</a></li>
+            <li><a href="index.html" target="_self">Informations</a></li>
+            <li><a href="film.html" target="_self">Vidéos</a></li>
+            <li><a href="serie.html" target="_self">Séries</a></li>
         </ul>
     </div>
     <div id="menu-toggle">&#9776;</div>
@@ -65,18 +64,9 @@
     <script>
         var menuToggle = document.getElementById('menu-toggle');
         var menu = document.getElementById('menu');
-        var menuLinks = document.querySelectorAll('#menu ul li a');
 
         menuToggle.addEventListener('click', function() {
             menu.classList.toggle('active');
-        });
-
-        menuLinks.forEach(function(link) {
-            link.addEventListener('click', function(event) {
-                event.preventDefault(); // Empêche le comportement par défaut du lien
-                var href = this.getAttribute('href'); // Récupère l'URL du lien
-                window.location.href = href; // Redirige vers l'URL du lien
-            });
         });
     </script>
 </body>
