--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
             height: 100%;
             position: fixed;
             top: 0;
-            left: -100%;
+            left: -200px;
             transition: left 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
@@ -31,9 +31,6 @@
         #menu ul li {
             padding: 10px;
             border-bottom: 1px solid #666;
-            opacity: 0;
-            transform: translateX(-20px);
-            transition: all 0.3s ease;
         }
         #menu ul li a {
             color: #fff;
@@ -44,10 +41,6 @@
         }
         #menu.active {
             left: 0;
-        }
-        #menu.active ul li {
-            opacity: 1;
-            transform: translateX(0);
         }
         #menu-toggle {
             position: fixed;
@@ -61,9 +54,9 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="index.html" target="_self">Informations</a></li>
-            <li><a href="film.html" target="_self">Vidéos</a></li>
-            <li><a href="serie.html" target="_self">Séries</a></li>
+            <li><a href="index.html">Informations</a></li>
+            <li><a href="film.html">Vidéos</a></li>
+            <li><a href="serie.html">Séries</a></li>
         </ul>
     </div>
     <div id="menu-toggle">☰</div>
@@ -81,7 +74,7 @@
             link.addEventListener('click', function(e) {
                 e.preventDefault();
                 menu.classList.remove('active');
-                window.location.href = e.target.href;
+                window.top.location.href = e.target.href;
             });
         });
     </script>
