--- a/menu.html
+++ b/menu.html
@@ -19,36 +19,16 @@
             position: fixed;
             top: 0;
             left: -200px;
-            transition: left 0.3s ease;
+            transition: left 0.3s ease, display 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
-        }
-        #menu ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        #menu ul li {
-            padding: 10px;
-            border-bottom: 1px solid #666;
-        }
-        #menu ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        #menu ul li a:hover {
-            color: #ccc;
+            display: none;
         }
         #menu.active {
             left: 0;
+            display: block;
         }
-        #menu-toggle {
-            position: fixed;
-            left: 20px;
-            top: 20px;
-            cursor: pointer;
-            z-index: 1001;
-        }
+        /* ... le reste de vos styles CSS ... */
     </style>
 </head>
 <body>
@@ -68,12 +48,18 @@
 
         menuToggle.addEventListener('click', function() {
             menu.classList.toggle('active');
+            if (menu.style.display === "none") {
+                menu.style.display = "block";
+            } else {
+                setTimeout(function(){ menu.style.display = "none"; }, 300);
+            }
         });
 
         links.forEach(function(link) {
             link.addEventListener('click', function(e) {
                 e.preventDefault();
                 menu.classList.remove('active');
+                setTimeout(function(){ menu.style.display = "none"; }, 300);
                 window.top.location.href = e.target.href;
             });
         });
