--- a/menu.html
+++ b/menu.html
@@ -19,16 +19,41 @@
             position: fixed;
             top: 0;
             left: -200px;
-            transition: left 0.3s ease, display 0.3s ease;
+            transition: left 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
             display: none;
+        }
+        #menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #menu ul li {
+            padding: 10px;
+            border-bottom: 1px solid #666;
+        }
+        #menu ul li a {
+            color: #fff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        #menu ul li a:hover {
+            color: #ccc;
         }
         #menu.active {
             left: 0;
             display: block;
         }
-        /* ... le reste de vos styles CSS ... */
+        #menu-toggle {
+            position: fixed;
+            left: 20px;
+            top: 20px;
+            cursor: pointer;
+            z-index: 1001;
+            color: #fff;
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
