--- a/menu.html
+++ b/menu.html
@@ -24,34 +24,9 @@
             padding-top: 60px;
             display: none;
         }
-        #menu ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        #menu ul li {
-            padding: 10px;
-            border-bottom: 1px solid #666;
-        }
-        #menu ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        #menu ul li a:hover {
-            color: #ccc;
-        }
-        #menu.active {
-            left: 0;
-            display: block;
-        }
-        #menu-toggle {
-            position: fixed;
-            left: 20px;
-            top: 20px;
-            cursor: pointer;
-            z-index: 1001;
-        }
+        /* ... le reste de vos styles CSS ... */
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="menu">
@@ -64,26 +39,15 @@
     <div id="menu-toggle">☰</div>
 
     <script>
-        var menuToggle = document.getElementById('menu-toggle');
-        var menu = document.getElementById('menu');
-        var links = document.querySelectorAll('#menu a');
+        $(document).ready(function(){
+            $('#menu-toggle').click(function(){
+                $('#menu').toggle('slide', {direction: 'left'}, 500);
+            });
 
-        menuToggle.addEventListener('click', function() {
-            if (menu.style.display === "none") {
-                menu.style.display = "block";
-                setTimeout(function(){ menu.classList.toggle('active'); }, 50);
-            } else {
-                menu.classList.toggle('active');
-                setTimeout(function(){ menu.style.display = "none"; }, 350);
-            }
-        });
-
-        links.forEach(function(link) {
-            link.addEventListener('click', function(e) {
+            $('#menu a').click(function(e){
                 e.preventDefault();
-                menu.classList.remove('active');
-                setTimeout(function(){ menu.style.display = "none"; }, 350);
-                window.top.location.href = e.target.href;
+                $('#menu').toggle('slide', {direction: 'left'}, 500);
+                window.top.location.href = $(this).attr('href');
             });
         });
     </script>
