--- a/menu.html
+++ b/menu.html
@@ -22,11 +22,34 @@
             transition: left 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
-            display: none;
         }
-        /* ... le reste de vos styles CSS ... */
+        #menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #menu ul li {
+            padding: 10px;
+            border-bottom: 1px solid #666;
+        }
+        #menu ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        #menu ul li a:hover {
+            color: #ccc;
+        }
+        #menu.active {
+            left: 0;
+        }
+        #menu-toggle {
+            position: fixed;
+            left: 20px;
+            top: 20px;
+            cursor: pointer;
+            z-index: 1001;
+        }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="menu">
@@ -39,15 +62,19 @@
     <div id="menu-toggle">☰</div>
 
     <script>
-        $(document).ready(function(){
-            $('#menu-toggle').click(function(){
-                $('#menu').toggle('slide', {direction: 'left'}, 500);
-            });
+        var menuToggle = document.getElementById('menu-toggle');
+        var menu = document.getElementById('menu');
+        var links = document.querySelectorAll('#menu a');
 
-            $('#menu a').click(function(e){
+        menuToggle.addEventListener('click', function() {
+            menu.classList.toggle('active');
+        });
+
+        links.forEach(function(link) {
+            link.addEventListener('click', function(e) {
                 e.preventDefault();
-                $('#menu').toggle('slide', {direction: 'left'}, 500);
-                window.top.location.href = $(this).attr('href');
+                menu.classList.remove('active');
+                window.top.location.href = e.target.href;
             });
         });
     </script>
