--- a/menu.html
+++ b/menu.html
@@ -19,9 +19,9 @@
             position: fixed;
             top: 0;
             left: -200px;
-            transition: left 0.3s ease;
             z-index: 1000;
             padding-top: 60px;
+            transition: left 0.3s ease; /* Transition seulement pour le mouvement horizontal */
         }
         #menu ul {
             list-style: none;
@@ -72,10 +72,15 @@
 
         links.forEach(function(link) {
             link.addEventListener('click', function(e) {
-                e.preventDefault();
                 menu.classList.remove('active');
-                window.top.location.href = e.target.href;
             });
+        });
+
+        // Ferme le menu lorsque l'utilisateur clique en dehors du menu
+        document.addEventListener('click', function(e) {
+            if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
+                menu.classList.remove('active');
+            }
         });
     </script>
 </body>
