--- a/index.html
+++ b/index.html
@@ -16,11 +16,53 @@
             margin-left: 220px; /* Pour tenir compte de la largeur du menu */
             padding: 20px;
         }
+        #menu {
+            background-color: #333;
+            width: 200px;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: -200px;
+            transition: left 0.3s ease;
+            z-index: 1000;
+            padding-top: 60px;
+        }
+        #menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #menu ul li {
+            padding: 10px;
+            border-bottom: 1px solid #666;
+        }
+        #menu ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        #menu ul li a:hover {
+            color: #ccc;
+        }
+        #menu.active {
+            left: 0;
+        }
+        #menu-toggle {
+            position: fixed;
+            left: 20px;
+            top: 20px;
+            cursor: pointer;
+            z-index: 1001;
+        }
     </style>
 </head>
 <body>
-    <!-- Chargement du menu latéral depuis menu.html -->
-    <iframe src="menu.html" frameborder="0" scrolling="no" style="position: fixed; top: 0; left: 0; height: 100%; width: 200px; z-index: 1000;"></iframe>
+    <!-- Chargement du menu latéral -->
+    <div id="menu">
+        <ul id="menu-list">
+            <!-- Le contenu du menu sera chargé ici -->
+        </ul>
+    </div>
+    <div id="menu-toggle">☰</div>
 
     <!-- Contenu de la page "Informations" -->
     <div id="content">
@@ -31,83 +73,26 @@
 
     <!-- Script de fond de constellations -->
     <script>
-        var canvas = document.createElement('canvas');
-        var ctx = canvas.getContext('2d');
-        var stars = [];
-        var numStars = 300;
-        var maxDistance = 100;
-        var mousePos = {x: 0, y: 0};
+        var menuToggle = document.getElementById('menu-toggle');
+        var menu = document.getElementById('menu');
+        var menuList = document.getElementById('menu-list');
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-        canvas.style.position = 'fixed';
-        canvas.style.top = '0';
-        canvas.style.left = '0';
-        canvas.style.pointerEvents = 'none'; 
-        canvas.style.zIndex = '-1';
+        // Chargement du contenu du menu depuis menu.html
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                menuList.innerHTML = data;
+            })
+            .catch(error => {
+                console.error('Une erreur s\'est produite lors du chargement du menu:', error);
+            });
 
-        document.body.appendChild(canvas);
+        menuToggle.addEventListener('click', function() {
+            menu.classList.toggle('active');
+        });
 
-        for(var i = 0; i < numStars; i++) {
-            var x = Math.random() * canvas.width;
-            var y = Math.random() * canvas.height;
-            var speedX = (Math.random() - 1.0) * 1.0;
-            var speedY = (Math.random() - 1.0) * 1.0;
-            stars.push({x: x, y: y, speedX: speedX, speedY: speedY});
-        }
-
-        function animate() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            for(var i = 0; i < numStars; i++) {
-                var star = stars[i];
-                star.x += star.speedX;
-                star.y += star.speedY;
-
-                if(star.x < 0 || star.x > canvas.width) star.speedX = -star.speedX;
-                if(star.y < 0 || star.y > canvas.height) star.speedY = -star.speedY;
-
-                ctx.beginPath();
-                ctx.arc(star.x, star.y, 2, 0, Math.PI * 2);
-                ctx.fillStyle = "#ffffff";
-                ctx.fill();
-
-                for(var j = i + 1; j < numStars; j++) {
-                    var otherStar = stars[j];
-                    var dx = otherStar.x - star.x;
-                    var dy = otherStar.y - star.y;
-                    var distance = Math.sqrt(dx * dx + dy * dy);
-
-                    if(distance < maxDistance) {
-                        ctx.beginPath();
-                        ctx.moveTo(star.x, star.y);
-                        ctx.lineTo(otherStar.x, otherStar.y);
-                        ctx.strokeStyle = "rgba(255, 255, 255, " + (1 - distance / maxDistance) + ")";
-                        ctx.stroke();
-                    }
-                }
-
-                var dx = mousePos.x - star.x;
-                var dy = mousePos.y - star.y;
-                var distance = Math.sqrt(dx * dx + dy * dy);
-
-                if(distance < maxDistance) {
-                    ctx.beginPath();
-                    ctx.moveTo(star.x, star.y);
-                    ctx.lineTo(mousePos.x, mousePos.y);
-                    ctx.strokeStyle = "rgba(255, 255, 255, " + (1 - distance / maxDistance) + ")";
-                    ctx.stroke();
-                }
-            }
-
-            requestAnimationFrame(animate);
-        }
-
-        animate();
-
-        document.addEventListener('mousemove', function(e) {
-            mousePos.x = e.clientX;
-            mousePos.y = e.clientY;
+        menuList.addEventListener('click', function() {
+            menu.classList.remove('active');
         });
     </script>
 </body>
