--- a/film.html
+++ b/film.html
@@ -121,8 +121,8 @@
     <div id="videoContainer">
         <div id="videoList"></div>
         <div id="pagination">
-            <span id="prevPage" class="paginationBtn">&lt; Précédent</span>
-            <span id="nextPage" class="paginationBtn">Suivant &gt;</span>
+            <span id="prevPage" class="paginationBtn">< Précédent</span>
+            <span id="nextPage" class="paginationBtn">Suivant ></span>
         </div>
     </div>
     <div id="modal">
@@ -132,17 +132,48 @@
         </div>
     </div>
 
-    <!-- Charger le menu -->
-    <iframe src="menu.html" frameborder="0" scrolling="no" style="position: fixed; top: 0; left: 0; height: 100%; width: 200px; z-index: 1000;"></iframe>
+    <!-- Chargement du menu latéral -->
+    <div id="menu">
+        <!-- Le contenu du menu sera chargé ici -->
+    </div>
+    <div id="menu-toggle">☰</div>
 
     <script>
-        var videosPerPage = 14; // Nombre de vidéos par page
-        var currentPage = 1; // Page actuelle
-        var videosData = []; // Contiendra toutes les vidéos
-        var filteredVideos = []; // Contiendra les vidéos filtrées
+        var menuToggle = document.getElementById('menu-toggle');
+        var menu = document.getElementById('menu');
 
-        // Fonction pour afficher les vidéos sur une page donnée
-        function displayVideos(page) {
+        // Chargement du contenu du menu depuis menu.html
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                menu.innerHTML = data;
+                var links = menu.querySelectorAll('a');
+
+                links.forEach(function(link) {
+                    link.addEventListener('click', function(e) {
+                        e.preventDefault();
+                        menu.classList.remove('active');
+                        window.top.location.href = e.target.href;
+                    });
+                });
+            })
+            .catch(error => {
+                console.error('Une erreur s\'est produite lors du chargement du menu:', error);
+            });
+
+        menuToggle.addEventListener('click', function() {
+            menu.classList.toggle('active');
+        });
+
+        // Ferme le menu lorsque l'utilisateur clique en dehors du menu
+        document.addEventListener('click', function(e) {
+            if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
+                menu.classList.remove('active');
+            }
+        });
+
+       // Fonction pour afficher les vidéos sur une page donnée
+       function displayVideos(page) {
             var startIndex = (page - 1) * videosPerPage;
             var endIndex = startIndex + videosPerPage;
             var videosToDisplay = filteredVideos.slice(startIndex, endIndex);
