--- a/film.html
+++ b/film.html
@@ -155,7 +155,7 @@
         <!-- Mettez ici votre image -->
         <h1>Goldorak</h1>
     </div>
-    <input type="text" id="searchInput" placeholder="Rechercher...">
+    <input type="text" id="searchInput" placeholder="Rechercher..." autocomplete="off">
     <div id="videoContainer">
         <div id="videoList"></div>
         <div id="pagination">
